# robotgym_devcontainer

./: .gitignore  frames_2024-04-12_18.36.05.gv
.devcontainer/: devcontainer.json
install/: local_setup.sh  setup.sh
install/m2wr_description/share/m2wr_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_package/share/my_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ti_rlsk_description/share/ti_rlsk_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
robotgym_ws/install/: local_setup.sh  setup.sh
robotgym_ws/install/ti_rlsk_pkg/share/ti_rlsk_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robotgym_ws/install/ti_rlsk_pkg/share/ti_rlsk_pkg/launch/: ti_rlsk_state_publisher_launch.py
robotgym_ws/log/: latest_build
robotgym_ws/src/common_dependencies/: setup.cfg  setup.py
robotgym_ws/src/multi_robot_controller/: setup.py
robotgym_ws/src/ti_rlsk_pkg/: setup.cfg  setup.py
robotgym_ws/src/ti_rlsk_pkg/launch/: multi_robot_launch.py  ti_rlsk_sim_launch_file.py
robotgym_ws/src/ti_rlsk_pkg/ti_rlsk_pkg/: robot_parameters_controller.py  simulation_service.py  ti_rlsk_group_controller.py
robotgym_ws/src/ti_rlsk_pkg/urdf/: ti_rlsk_robot.urdf.xacro
robotgym_ws/src/user_interface/: setup.py
(+42 files in other folders)
